# haskellbook-solutions-with-scala

./: README.md
haskell/: .gitignore  README.md  haskell-programming-from-first-principles-solutions.cabal  package.yaml  stack.yaml
haskell/test/: Chapter10Spec.hs  Chapter11Spec.hs  Chapter12Spec.hs  Chapter14Spec.hs  Chapter15MonoidSpec.hs  Chapter15SemigroupSpec.hs  Chapter16Spec.hs  Chapter17Spec.hs  Chapter20Spec.hs  Chapter6Spec.hs  Chapter7Spec.hs  Chapter8Spec.hs  Chapter9Spec.hs
scala/: README.md  build.sbt
scala/src/test/scala/: Chapter10Test.scala  Chapter11Test.scala  Chapter12Test.scala  Chapter14Prop.scala  Chapter15MonoidProp.scala  Chapter15MonoidTest.scala  Chapter15SemigroupProp.scala  Chapter15SemigroupTest.scala  Chapter16Prop.scala  Chapter16Test.scala  Chapter17Test.scala  Chapter20Test.scala  Chapter21Test.scala  Chapter6Test.scala  Chapter7Test.scala  Chapter8Test.scala  Chapter9Test.scala  MyPredef.scala
